seed species are defined. This fix permits network generation for models with
0-order synthesis but no seed species.
* Fixed bug where scan_var.pl generated invalid scripts if the BNGL model file
does not end with a new line.
* Fixed bug where functions comprised of more than 512 characters could not 
be read. There is now no limit to the number of characters.

==== Minor Syntax Changes ====
* Deprecated use of fixed quantity flag "$"  within reactant rules.
The fixed quantity flag should only be used in the seed species block.
* Use of "fake" species such as "NULL", "TRASH", or "SINK" as placeholders
in reaction rules with zero reactants and products is now deprecated.
We advise the use of the special symbol "0" instead.
* Labels are now permitted before definitions in all BNGL blocks.

==== Changes to BNG action commands ====
* Added 'continue' option to generate_network() action. If this option
is enabled, BNG will continue generating a network from the last
completed iteration. If disabled, BNG will start reset the network
and generate from scratch. The option is enabled by default, i.e.'continue=>1'.
* Complex bookkeeping option, 'complex', is now enabled by default in the
simulate_nf() action, i.e. 'complex=>1'. '''''CORRECTION:''''' ''The
implementation of this change was flawed. The 2.2.4-testing release still
defaults to complex bookkeeping disabled. To enable complex bookkeeping, add
the option complex=>1''.
* The 'exact' option for generate_hybrid_model() was renamed to 'safe'. This
avoids confusion over whether the standard method is exact. Indeed, both
methods are exact if population lumping is instantaneous. However, only
the 'safe' method is exact for finite lumping rates. The default is
'safe=>0'. The old 'exact' option will be supported up to (and including) the
next stable release.

==== Error and Warning Message Changes ====
* Useless {MatchOnce} attribute in species definitions are now detected and
reported.